--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
   {% endwith %}
 
   {% if "temporary" in session %}
-    <p class="center-content">Link expires in 5 minutes. Click the button below to start over.</p>
-    <p class="center-content">Close this link after you click on the confirmation email.</p>
+    <p class="center-content">Click the button below to start over.</p>
+    
     <div class="center-content"> 
       <form action="logout" method="post">
         <input type="submit" value="Start over">
