--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="/main">Dashboard</a>
+    <a class="navbar-brand" href="/main">Camping</a>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         {% if "user" not in session%}
@@ -31,7 +31,7 @@
       </div>
     </div>
   </nav>
-    <h1 class="main-header">NLS Table-tennis Dashboard</h1>
+    <h1 class="main-header">Camping App</h1>
 
     <div class="container-fluid">
     {% block content %}
